--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,135 +1,138 @@
-
 /* Apply styles to the body to set a background color */
 body {
-/* Trying to code in a background image // potential gifs */ 
-
-background-image: url('../assets/images/neon-stream1.gif'); /* Adjust the path as needed */
-background-size: cover;
-background-position: center center;
-margin: 0;
-padding: 0;
-display: grid;
-grid-template-columns: 1fr auto;
-grid-gap: 20px;
-align-items: center;
-justify-content: space-between;
-}
-
-.header {
-  text-align: center;
-}
-/* Style the h1 element */
-.title {
-  background-color: #30a2cf; 
-  padding: 10px; 
-  text-align: center; 
-  display: inline-block;
-  border-radius: 10px;
-  
-}
-
-/* Style the h2 element */
-.title h1
-.title h2 {
-    background-color: transparent;
-    display: inline;
-    margin: 0;
+    /* Trying to code in a background image // potential gifs */ 
     
-}
-
-/* Style the ul element */
-ul {
-  list-style: none; 
-  display: flex; 
-  justify-content: center; 
-  padding: 0; 
-}
-
-/* Style the li elements within the ul */
-li {
-  margin: 0 30px; 
-}
-
-/* Style the banner element */
-.banner {
-  background-color: 
-  padding: 0px; 
-  margin: 0; 
-  text-align: center; 
-  height: 100vh;
-  position: relative;
-}
-
-
-
-
-/* Style the filter section */
-#filter {
-  text-align: center; 
-  margin: 20px 0; 
-}
-
-/* Style the sort filter button */
-#sortFilterBtn {
-  background-color: #30a2cf;  
-  padding: 10px 20px; 
-  border: none; 
-  cursor: pointer; 
-  border-radius: 10px;
-}
-
-/* Style the genre dropdown */
-#genreDropdown {
-  background-color: #30a2cf;  
-  padding: 5px; 
-  border: none; 
-  border-radius: 10px;
-}
-
-/* Style the game list container */
-#gameList {
-  background-color: #30a2cf;  
-  padding: 20px; 
-  margin: 20px 0; 
-  border-radius: 10px;
-}
-
-/* Add styles for images within the game list if needed */
-#gameList img {
-  max-width: 100%;
-  height: auto;
-  margin: 10px;
-}
-
-
-
-/*body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    text-align: center;
-}
-
-h1 {
-    font-size: 36px;
-    margin: 20px 0;
-}
-
-nav ul {
-    list-style-type: none;
+    background-image: url('../assets/images/neon-stream1.gif'); /* Adjust the path as needed */
+    background-size: cover;
+    background-position: center center;
+    margin: 0;
     padding: 0;
-}
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+    }
+    
+    .header {
+      text-align: center;
+    }
+    /* Style the h1 element */
+    .title {
+      background-color: #30a2cf; 
+      padding: 10px; 
+      text-align: center; 
+      display: inline-block;
+      border-radius: 10px;
+      
+    }
+    
+    /* Style the h2 element */
+    .title h1
+    .title h2 {
+        background-color: transparent;
+        display: inline;
+        margin: 0;
+        
+    }
+    
+    /* Style the ul element */
+    ul {
+      list-style: none; 
+      display: flex; 
+      justify-content: center; 
+      padding: 0; 
+    }
+    
+    /* Style the li elements within the ul */
+    li {
+      margin: 0 30px; 
+    }
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-#filter {
-    margin: 20px 0;
-}
-
-#genreDropdown {
-    display: none; /* Hide by default */
-
-
-/* Add more CSS styles */
+    button {
+        background-color: #30a2cf; 
+    }
+    
+    /* Style the banner element */
+    .banner {
+      background-color: 
+      padding: 0px; 
+      margin: 0; 
+      text-align: center; 
+      height: 100vh;
+      position: relative;
+    }
+    
+    
+    
+    
+    /* Style the filter section */
+    #filter {
+      text-align: center; 
+      margin: 20px 0; 
+    }
+    
+    /* Style the sort filter button */
+    #sortFilterBtn {
+      background-color: #30a2cf;  
+      padding: 10px 20px; 
+      border: none; 
+      cursor: pointer; 
+      border-radius: 10px;
+    }
+    
+    /* Style the genre dropdown */
+    #genreDropdown {
+      background-color: #30a2cf;  
+      padding: 5px; 
+      border: none; 
+      border-radius: 10px;
+    }
+    
+    /* Style the game list container */
+    #gameList {
+      background-color: #30a2cf;  
+      padding: 20px; 
+      margin: 20px 0; 
+      border-radius: 10px;
+    }
+    
+    /* Add styles for images within the game list if needed */
+    #gameList img {
+      max-width: 100%;
+      height: auto;
+      margin: 10px;
+    }
+    
+    
+    
+    /*body {
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+        text-align: center;
+    }
+    
+    h1 {
+        font-size: 36px;
+        margin: 20px 0;
+    }
+    
+    nav ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    
+    nav ul li {
+        display: inline;
+        margin-right: 20px;
+    }
+    
+    #filter {
+        margin: 20px 0;
+    }
+    
+    #genreDropdown {
+        display: none; /* Hide by default */
+    
+    
+    /* Add more CSS styles */
