--- a/Assets/style.css
+++ b/Assets/style.css
@@ -2,7 +2,7 @@
 body {
     /* Trying to code in a background image // potential gifs */ 
     
-    background-image: url('../assets/images/neon-stream1.gif'); /* Adjust the path as needed */
+    background-image: url('../assets/Images/Misc./neon-stream1.gif'); /* Adjust the path as needed */
     background-size: cover;
     background-position: center center;
     margin: 0;
