--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,8 +1,5 @@
-/* Apply styles to the body to set a background color */
 body {
-    /* Trying to code in a background image // potential gifs */ 
-    
-    background-image: url('../assets/Images/Misc./neon-stream1.gif'); /* Adjust the path as needed */
+    background-image: url('./Assets/Images/neon-stream1.gif');
     background-size: cover;
     background-position: center center;
     margin: 0;
