--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -60,23 +60,43 @@ body {
       position: relative;
     }
     
-    
-    
-    
-    /* Style the filter section */
-    #filter {
-      text-align: center; 
-      margin: 20px 0; 
-    }
-    
-    /* Style the sort filter button */
-    #sortFilterBtn {
-      background-color: #30a2cf;  
-      padding: 10px 20px; 
-      border: none; 
-      cursor: pointer; 
-      border-radius: 10px;
-    }
+   /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.music-modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
     
 
     h3 {
