--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,89 +1,82 @@
 body {
-    background-image: url('./Assets/Images/neon-stream1.gif');
-    background-size: cover;
-    background-position: center center;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-gap: 20px;
-    align-items: center;
-    justify-content: space-between;
-    }
+  background-image: url('https://media1.giphy.com/media/3ohhwJlKHGchQUtvBS/giphy.gif');
+  background-size: cover;
+  background-position: center center;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-gap: 20px;
+  align-items: center;
+  justify-content: space-between;
+}
     
-    .header {
-      text-align: center;
-    }
-    /* Style the h1 element */
-    .title {
-      background-color: #30a2cf; 
-      padding: 10px; 
-      text-align: center; 
-      display: inline-block;
-      border-radius: 10px;
-      
-    }
-    
-    /* Style the h2 element */
-    .title h1
-    .title h2 {
-        background-color: transparent;
-        display: inline;
-        margin: 0;
-        
-    }
-    
-    /* Style the ul element */
-    ul {
-      list-style: none; 
-      display: flex; 
-      justify-content: center; 
-      padding: 0; 
-    }
-    
-    /* Style the li elements within the ul */
-    li {
-      margin: 0 30px; 
-    }
+.header {
+  text-align: center;
+}
 
-    button {
-        background-color: #30a2cf; 
-    }
+.title {
+  background-color: #30a2cf; 
+  padding: 10px; 
+  text-align: center; 
+  display: inline-block;
+  border-radius: 10px;
+}
+
+.title h1
+.title h2 {
+  background-color: transparent;
+  display: inline;
+  margin: 0;        
+}
     
-    /* Style the banner element */
-    .banner {
-      background-color: 
-      padding: 0px; 
-      margin: 0; 
-      text-align: center; 
-      height: 100vh;
-      position: relative;
-    }
+ul {
+  list-style: none; 
+  display: flex; 
+  justify-content: center; 
+  padding: 0; 
+}
     
-   /* The Modal (background) */
+li {
+  margin: 0 30px; 
+}
+
+button {
+  background-color: #30a2cf; 
+}
+    
+
+.banner {
+  background-color: 
+  padding: 0px; 
+  margin: 0; 
+  text-align: center; 
+  height: 100vh;
+  position: relative;
+}
+    
+
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
 }
 
-/* Modal Content/Box */
 .music-modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto; 
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%; 
 }
 
-/* The Close Button */
 .close {
   color: #aaa;
   float: right;
@@ -99,24 +92,24 @@ body {
 }
     
 
-    h3 {
-        background-color: #30a2cf; 
-        padding: 10px; 
-        border-radius: 10px;
-    }
+h3 {
+  background-color: #30a2cf; 
+  padding: 10px; 
+  border-radius: 10px;
+}
     
 
-    .image-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center; /* Center images horizontally */
-    }
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; 
+}
     
-    .image {
-        max-width: 100%; /* Set a maximum width for scaling */
-        height: 50%; /* Automatically adjust height to maintain aspect ratio */
-        margin: 10px;
-        box-sizing: border-box; /* Include margin in the width calculation */
-    }
+.image {
+  max-width: 100%; 
+  height: 50%; 
+  margin: 10px;
+  box-sizing: border-box; 
+}
     
     
