--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -56,9 +56,38 @@ button {
 }
     
 
+
 /* Styles for the modal and its content */
+.games-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.games-modal-content {
+  background-color: #fff;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.exit {
+  float: right;
+  cursor: pointer;
+}
+
+
+
 .modal {
-  display: none; /* Hide the modal by default */
+  display: none; Hide the modal by default
   position: fixed;
   z-index: 1;
   left: 0;
@@ -122,4 +151,14 @@ h3 {
   box-sizing: border-box; 
 }
     
-    
+/* Additional styles for Games */
+#gamesList {
+  margin-top: 20px;
+}
+
+#loadMoreBtn {
+  display: block;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
