Added favorites function to jokes and polished code and paths

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -121,6 +121,13 @@ button {
   margin-top: 20px;
 }
 
+#favoriteJokesContainer {
+  font-size: 18px;
+  color:black;  
+  background-color: purple;
+  margin-top: 20px;
+}
+
 input[type="text"] {
   width: 100%;
   padding: 10px;
