--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,4 +1,5 @@
 body {
+  /* Background gif link */
   background-image: url('https://media1.giphy.com/media/3ohhwJlKHGchQUtvBS/giphy.gif');
   background-size: cover;
   background-position: center center;
@@ -15,6 +16,7 @@ body {
   text-align: center;
 }
 
+/* Styles for title */
 .title {
   background-color: #30a2cf; 
   padding: 10px; 
@@ -45,7 +47,7 @@ button {
   background-color: #30a2cf; 
 }
     
-
+/* Styles for banner*/
 .banner {
   padding: 0px; 
   margin: 0; 
